Bug 219598 - Text missing from printout when printing >1 page
Summary: Text missing from printout when printing >1 page
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-21 22:01 UTC by Roger Leigh
Modified: 2010-01-03 01:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Original text file (1.75 KB, text/plain)
2009-12-21 22:01 UTC, Roger Leigh
Details
PDF printout (20.25 KB, application/pdf)
2009-12-21 22:02 UTC, Roger Leigh
Details
Results of pdftotext on PDF printout (2.11 KB, text/plain)
2009-12-21 22:03 UTC, Roger Leigh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roger Leigh 2009-12-21 22:01:14 UTC
Version:           4.3.4 (KDE 4.3.4) (using 4.3.4 (KDE 4.3.4), Debian packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.32-trunk-amd64

When printing out a text file where the text flows over more than one page, there is a single line missing from the output.

Note that it's not actually missing, just invisible.  That is to say, if you print to a file (PDF) and then run pdftotext on the file, the invisible text is actually present.  I suspect it's being masked by either the footer on the first page, or the header on the second page.

So this can be verified, I'll attach:
1) the original text file
2) the PDF printout
3) the result of pdftotext on the PDF file.


Regards,
Roger
Comment 1 Roger Leigh 2009-12-21 22:01:53 UTC
Created attachment 39225 [details]
Original text file
Comment 2 Roger Leigh 2009-12-21 22:02:51 UTC
Created attachment 39226 [details]
PDF printout
Comment 3 Roger Leigh 2009-12-21 22:03:31 UTC
Created attachment 39227 [details]
Results of pdftotext on PDF printout
Comment 4 Roger Leigh 2009-12-21 22:05:39 UTC
Note: may possibly be a duplicate of bug 202229, and (possibly) 176609, though that's looking less likely.

Text originally taken from
http://www.goodtoknow.co.uk/recipes/272952/Hairy-Bakers---Bakewell-tart
Comment 5 Pascal Létourneau 2009-12-30 02:20:19 UTC
SVN commit 1067616 by pletourn:

Fix printing when a line is split between 2 pages

BUG:219598


 M  +13 -8     kateprinter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1067616
Comment 6 Dominik Haumann 2010-01-03 01:32:32 UTC
SVN commit 1069227 by dhaumann:

backport SVN commit 1067616 by pletourn:

Fix printing when a line is split between 2 pages

CCBUG: 219598


 M  +13 -8     kateprinter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1069227