Fix printing when a line is split between 2 pages

BUG:219598

svn path=/trunk/KDE/kdelibs/kate/; revision=1067616